--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sq26.androidstudydemo" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.sq26.androidstudydemo">
+    <!-- 网络权限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--允许程序连接到已配对的蓝牙设备-->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <!--允许程序发现和配对蓝牙设备-->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <!--允许程序发现和配对蓝牙设备-->
+    <uses-permission-sdk-23 android:name="android.permission.BLUETOOTH_PRIVILEGED" />
+    <!--允许程序通过WiFi或移动基站的方式获取用户错略的经纬度信息-->
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!--允许程序读取或写入登记check-in数据库属性表的权限-->
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -8,14 +21,40 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        <activity
+            android:name=".activity.BluetoothManageActivity"
+            android:configChanges="fontScale|keyboard|keyboardHidden|locale|orientation|screenLayout|uiMode|screenSize|navigation"
+            ></activity>
+        <activity android:name=".activity.AudioControllerActivity" />
+        <activity android:name=".activity.RecyclerViewActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.StatusBarActivity" />
+        <activity android:name=".activity.QrcodeActivity" />
+        <activity android:name=".activity.WebViewActivity" />
+
+        <receiver android:name=".WidgetProvider.DemoWightProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_config_demo" />
+        </receiver>
+
+        <service
+            android:name=".service.DemoService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":aidl" />
     </application>
 
 </manifest>
