--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext {
+        /*sdk and version*
+        *多module统一版本控制
+        */
+        compile_sdk_version = 28
+        min_sdk_version = 21
+        target_sdk_version = 28
+        constraint_version = '1.1.0'
+        version_code = 1
+        version_name = '1.0'
+
+        /*support*/
+        android_support = '28.0.0'
+
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-        
-
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
