--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,17 @@
 
 buildscript {
     repositories {
+        //Butter Knife需要的支持
+        mavenCentral()
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        //Butter Knife需要的支持
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,7 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
