--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,14 +128,15 @@
     <uses-permission-sdk-23 android:name="android.permission.WRITE_SECURE_SETTINGS" />
 
     <application
+        android:name=".app.MyApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".app.MyApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.FileManagementActivity"></activity>
+        <activity android:name=".ui.activity.MediaManagementActivity"></activity>
+        <activity android:name=".ui.activity.FileManagementActivity" />
         <activity android:name=".ui.activity.AuthorizedOperationActivity" />
         <activity android:name=".ui.activity.StatusBarActivity" />
         <activity android:name=".ui.activity.CameraActivity" />
