--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.3'
     //Fresco框架
     implementation 'com.facebook.fresco:fresco:2.0.0'
+    implementation 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
 }
