下载管理器已完成基本下载功能2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,26 +29,29 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    //Google团队开发的Material风格的新组件支持库
+    implementation 'com.google.android.material:material:1.0.0'
     //constraintLayout布局控件
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //RecyclerView控件
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    //CardView控件
+    //CardView控件,纸片布局
     implementation 'androidx.cardview:cardview:1.0.0'
     //新的viewPager2控件,找机会试试
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     //Butter Knife,黄油刀,view注解框架
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation 'com.jakewharton:butterknife:10.2.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     //fastJson json解析库
-    implementation 'com.alibaba:fastjson:1.2.58'
+    implementation 'com.alibaba:fastjson:1.2.62'
     //RxJava链式异步处理库
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.11'
     //zxing框架核心
-    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'com.google.zxing:core:3.4.0'
     //Fresco框架
     implementation 'com.facebook.fresco:fresco:2.0.0'
-    implementation 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    //okHttp轻量级网络框架
+    implementation 'com.squareup.okhttp3:okhttp:4.2.1'
+
 }
