--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,7 +138,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.EncryptionActivity"></activity>
+        <activity android:name=".ui.activity.NetworkActivity"></activity>
+        <activity android:name=".ui.activity.EncryptionActivity" />
         <activity android:name=".ui.activity.RecyclerViewActivity" />
         <activity android:name=".ui.activity.DownloadManagementActivity" />
         <activity android:name=".ui.activity.PullToRefreshActivity" /> <!-- 可以打开文本文件的activity -->
@@ -175,6 +176,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--
+            name :服务所在的位置
+            process:指定服务运行的进程
+        -->
+        <service
+            android:name=".util.network.download.DownloadService"
+            android:process=":sq26" />
+
         <!--
         authorities：是该项目的包名+provider
         grantUriPermissions：必须是true，表示授予 URI 临时访问权限
