--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //Google团队开发的Material风格的新组件支持库
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     //constraintLayout布局控件
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //RecyclerView控件
@@ -40,8 +40,8 @@ dependencies {
     //新的viewPager2控件,找机会试试
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     //Butter Knife,黄油刀,view注解框架
-    implementation 'com.jakewharton:butterknife:10.2.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+    implementation 'com.jakewharton:butterknife:10.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
     //fastJson json解析库
     implementation 'com.alibaba:fastjson:1.2.62'
     //RxJava链式异步处理库
@@ -53,5 +53,6 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:2.0.0'
     //okHttp轻量级网络框架
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
 
 }
