--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                //把Room在编译时将数据库的架构信息导出到JSON文件中。
+                // 在room.schemaLocation中设置导出路径
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -28,15 +37,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.exifinterface:exifinterface:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Google团队开发的Material风格的新组件支持库
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     //constraintLayout布局控件
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     //RecyclerView控件
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //CardView控件,纸片布局
@@ -44,8 +52,8 @@ dependencies {
     //新的viewPager2控件,找机会试试
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     //Butter Knife,黄油刀,view注解框架
-    implementation 'com.jakewharton:butterknife:10.2.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
     //fastJson json解析库
     implementation 'com.alibaba:fastjson:1.2.62'
     //RxJava链式异步处理库
@@ -55,6 +63,8 @@ dependencies {
     implementation 'com.google.zxing:core:3.4.0'
     //Fresco框架
     implementation 'com.facebook.fresco:fresco:2.2.0'
+    //获取图片的属性标签
+    implementation 'androidx.exifinterface:exifinterface:1.2.0'
     //okHttp轻量级网络框架
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     //android文件管理类
@@ -63,4 +73,15 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     //Android的原始Socket，HTTP（s）客户端/服务器和WebSocket库
     implementation 'com.koushikdutta.async:androidasync:2.2.1'
+    //生命周期感知型组件
+    implementation "android.arch.lifecycle:common-java8:1.1.1"
+    // Room 组件(数据库框架)
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
+    androidTestImplementation "androidx.room:room-testing:2.2.5"
+    // paging 组件(数据分页)
+    implementation "androidx.paging:paging-runtime:3.0.0-alpha06"
+    //navigation组件(fragment管理)
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
 }
