--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,7 +138,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.file.FileImageActivity"></activity>
+        <activity android:name=".ui.activity.AppManagementActivity"></activity>
+        <activity android:name=".ui.activity.WiFiDirectActivity" />
+        <activity android:name=".ui.activity.PagingActivity" />
+        <activity android:name=".ui.activity.RoomActivity" />
+        <activity android:name=".ui.activity.NavigationActivity" />
+        <activity android:name=".ui.activity.ViewModeActivity" />
+        <activity android:name=".ui.activity.LiveDataActivity" />
+        <activity android:name=".ui.activity.LifecycleActivity" />
+        <activity android:name=".ui.activity.file.FileImageActivity" />
         <activity android:name=".ui.util.PdfActivity">
 
             <!-- ignore忽略app链接错误 -->
