--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,19 @@ buildscript {
         mavenCentral()
         google()
         jcenter()
-
+//        备用gradle仓库
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+//        maven {
+//            url "https://maven.google.com"
+//        }
+//        maven { url "https://jitpack.io" }
+//        jcenter { url "http://jcenter.bintray.com/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         //Butter Knife需要的支持
-        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
