加入kotlin语言的支持

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,7 +138,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.AppManagementActivity"></activity>
+        <activity android:name=".ui.activity.KotlinActivity"></activity>
+        <activity android:name=".ui.activity.AppManagementActivity" />
         <activity android:name=".ui.activity.WiFiDirectActivity" />
         <activity android:name=".ui.activity.PagingActivity" />
         <activity android:name=".ui.activity.RoomActivity" />
