--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
+//Android项目开发插件
 apply plugin: 'com.android.application'
+//kotlin开发插件
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//kotlin注解处理插件，kapt是kotlin的注解处理器，kapt 也能够处理 Java 文件，所以需要替换 annotationProcessor 关键字
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -21,6 +24,10 @@ android {
             }
         }
     }
+    //视图绑定功能启用
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             // 是否进行混淆
@@ -40,13 +47,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //Google团队开发的Material风格的新组件支持库
     implementation 'com.google.android.material:material:1.2.1'
     //constraintLayout布局控件
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     //RecyclerView控件
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //CardView控件,纸片布局
@@ -55,35 +62,45 @@ dependencies {
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     //Butter Knife,黄油刀,view注解框架
     implementation 'com.jakewharton:butterknife:10.2.3'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    kapt 'com.jakewharton:butterknife-compiler:10.2.3'
     //fastJson json解析库
-    implementation 'com.alibaba:fastjson:1.2.62'
+    implementation 'com.alibaba:fastjson:1.2.74'
     //RxJava链式异步处理库
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.11'
     //zxing框架核心
-    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'com.google.zxing:core:3.4.1'
     //Fresco框架
     implementation 'com.facebook.fresco:fresco:2.2.0'
     //获取图片的属性标签
-    implementation 'androidx.exifinterface:exifinterface:1.3.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.1'
     //okHttp轻量级网络框架
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     //android文件管理类
     implementation 'androidx.documentfile:documentfile:1.0.1'
     //AndroidPdfViewer 查看pdf的控件
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     //Android的原始Socket，HTTP（s）客户端/服务器和WebSocket库
-    implementation 'com.koushikdutta.async:androidasync:2.2.1'
+    implementation 'com.koushikdutta.async:androidasync:3.0.9'
     //生命周期感知型组件
     implementation "android.arch.lifecycle:common-java8:1.1.1"
     // Room 组件(数据库框架)
+    //Android官网依赖是这样的，java开发人员使用
+//    implementation "android.arch.persistence.room:runtime:$room_version"
+//    annotationProcessor 'android.arch.persistence.room:compiler:$room_version'
+    //对于那些使用Kotlin的人，请尝试在应用中更改annotationProcessor为kapt
+//    implementation "android.arch.persistence.room:runtime:$room_version"
+//    kapt "android.arch.persistence.room:compiler:$room_version"
+//如果您已迁移到androidx
     implementation "androidx.room:room-runtime:2.2.5"
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    //Kotlin扩展程序和协同程序对Room的支持
+    implementation "androidx.room:room-ktx:2.2.5"
     // paging 组件(数据分页)
-    implementation "androidx.paging:paging-runtime:3.0.0-alpha06"
+    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
     //navigation组件(fragment管理)
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.1'
+    implementation 'androidx.navigation:navigation-ui:2.3.1'
+    //日志管理框架
+    implementation 'com.orhanobut:logger:2.2.0'
 }
