--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 //kotlin注解处理插件，kapt是kotlin的注解处理器，kapt 也能够处理 Java 文件，所以需要替换 annotationProcessor 关键字
 apply plugin: 'kotlin-kapt'
-
+//导航的插件,safeargs用于在fragment之间跳转传输少量数据,适用于 Java 模块或 Java 和 Kotlin 混合模块的 Java 语言代码
+apply plugin: "androidx.navigation.safeargs"
 android {
     compileSdkVersion 30
     defaultConfig {
@@ -27,6 +28,7 @@ android {
     //视图绑定功能启用
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
     buildTypes {
         release {
@@ -42,11 +44,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+//        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.21"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -73,7 +81,7 @@ dependencies {
     //Fresco框架
     implementation 'com.facebook.fresco:fresco:2.2.0'
     //获取图片的属性标签
-    implementation 'androidx.exifinterface:exifinterface:1.3.1'
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
     //okHttp轻量级网络框架
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     //android文件管理类
@@ -83,7 +91,9 @@ dependencies {
     //Android的原始Socket，HTTP（s）客户端/服务器和WebSocket库
     implementation 'com.koushikdutta.async:androidasync:3.0.9'
     //生命周期感知型组件
-    implementation "android.arch.lifecycle:common-java8:1.1.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
     // Room 组件(数据库框架)
     //Android官网依赖是这样的，java开发人员使用
 //    implementation "android.arch.persistence.room:runtime:$room_version"
@@ -92,15 +102,20 @@ dependencies {
 //    implementation "android.arch.persistence.room:runtime:$room_version"
 //    kapt "android.arch.persistence.room:compiler:$room_version"
 //如果您已迁移到androidx
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-runtime:2.2.6"
+    kapt "androidx.room:room-compiler:2.2.6"
     //Kotlin扩展程序和协同程序对Room的支持
-    implementation "androidx.room:room-ktx:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.6"
     // paging 组件(数据分页)
     implementation "androidx.paging:paging-runtime-ktx:2.1.2"
     //navigation组件(fragment管理)
-    implementation 'androidx.navigation:navigation-fragment:2.3.1'
-    implementation 'androidx.navigation:navigation-ui:2.3.1'
-    //日志管理框架
-    implementation 'com.orhanobut:logger:2.2.0'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.2"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha04"
+    //activity的kotlin强化库
+    implementation "androidx.activity:activity-ktx:1.1.0"
+    //Android 上的 Kotlin 协程
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 }
