--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,15 +130,17 @@
     <uses-permission-sdk-23 android:name="android.permission.WRITE_SECURE_SETTINGS" />
 
     <application
-        android:name=".app.MyApplication"
+        android:name=".app.MyApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.KotlinActivity"></activity>
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:targetApi="n">
+        <activity android:name=".ui.activity.DataBindingActivity" />
+        <activity android:name=".ui.activity.KotlinActivity" />
         <activity android:name=".ui.activity.AppManagementActivity" />
         <activity android:name=".ui.activity.WiFiDirectActivity" />
         <activity android:name=".ui.activity.PagingActivity" />
