--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    //gradle脚本执行所需依赖，分别是对应的maven库和插件
     repositories {
         //Butter Knife需要的支持
         mavenCentral()
         google()
         jcenter()
-//        备用gradle仓库
-//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-//        maven {
-//            url "https://maven.google.com"
-//        }
-//        maven { url "https://jitpack.io" }
-//        jcenter { url "http://jcenter.bintray.com/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         //kotlin支持
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.20'
-        //kotlin扩展插件Anko库的支持
-//        classpath 'org.jetbrains.kotlin:kotlin-android-extensions:1.4.10'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21'
         //Butter Knife需要的支持
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.3'
-
+        //使用 Safe Args 确保类型安全
+        //如需在目的地之间导航，建议使用 Safe Args Gradle 插件。
+        // 该插件可以生成简单的对象和构建器类，这些类支持在目的地之间进行类型安全的导航和参数传递。
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 allprojects {
+    //项目需要的依赖
     repositories {
+        //阿里云代理
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         google()
         jcenter()
-
     }
 }
 
