--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -134,11 +134,12 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="n">
+        <activity android:name=".ui.activity.LoginActivity"></activity>
         <activity android:name=".ui.activity.DataBindingActivity" />
         <activity android:name=".ui.activity.KotlinActivity" />
         <activity android:name=".ui.activity.AppManagementActivity" />
