--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
         //如需在目的地之间导航，建议使用 Safe Args Gradle 插件。
         // 该插件可以生成简单的对象和构建器类，这些类支持在目的地之间进行类型安全的导航和参数传递。
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
+        //Hilt插件, Hilt是 Android 的依赖项注入库，可减少在项目中执行手动依赖项注入的样板代码。
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,7 +28,7 @@ buildscript {
 allprojects {
     //项目需要的依赖
     repositories {
-        //阿里云代理
+        //阿里仓库代理
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
