--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
         jvmTarget = "1.8"
 //        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
     }
+    buildToolsVersion '30.0.3'
 }
 
 dependencies {
@@ -134,4 +135,6 @@ dependencies {
     //dagger hilt 解耦各个模块之间的强关联性
     implementation "com.google.dagger:hilt-android:2.28.3-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28.3-alpha"
+    //hilt,Viewmodel生命周期支持
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
 }
